manifest/base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #namespace: mean
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - image: nitin27may/mean-nginx
          imagePullPolicy: IfNotPresent
          name: mean-nginx
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
