manifest/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  #namespace: mean
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  type: ClusterIP
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
