manifest/base/express-service.yaml
apiVersion: v1
kind: Service
metadata:
  #namespace: mean
  creationTimestamp: null
  labels:
    io.kompose.service: express
  name: express
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: express
status:
  loadBalancer: {}
