manifest/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
      nodePort: 32306
  selector:
    io.kompose.service: nginx
  type: LoadBalancer
